--- a/service/ui/.settings/org.eclipse.wst.common.component
+++ b/service/ui/.settings/org.eclipse.wst.common.component
@@ -4,8 +4,10 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/java"/>
+        <dependent-module archiveName="jobs-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jobs/jobs">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="service"/>
-        <property name="java-output-path" value="/service/target/classes"/>
+        <property name="java-output-path" value="/ui/target/classes"/>
     </wb-module>
 </project-modules>
